org_unpackaged/unpackaged/objects/CRG_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_email__c</fullName>
        <formula>rs_contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_phone__c</fullName>
        <formula>rs_contact__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_title__c</fullName>
        <formula>rs_contact__r.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rs_clientReferenceGuide__c</fullName>
        <label>Client Reference Guide</label>
        <referenceTo>CRG__c</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>CRG_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rs_contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CRG Role</relationshipLabel>
        <relationshipName>CRG_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>CRG Contact</label>
    <nameField>
        <displayFormat>CRG-Contact{00000000}</displayFormat>
        <label>CRG Contacts Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRG Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>